--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
-before_install: 'nvm install node'
-install: 'bin/setup'
-notifications:
-  email: false
-script: 'bundle exec middleman build --verbose'
-sudo: false
+
+script: 'yarn prod'
+
+#after_success:
+#  - chmod +x ./publish.sh
+#  - ./publish.sh
