--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "middleman-seed",
   "version": "1.0.0",
-  "description": "seo optimised boilerplate app for middleman 4 with gulp, webpack and rspec",
+  "description": "seo optimised boilerplate for middleman 4 with gulp, webpack and rspec",
   "author": "dsgndhat <dsgndhat@teknik.io>",
   "homepage": "https://github.com/dsgndhat/middleman-seed",
   "license": "MIT",
@@ -16,18 +16,24 @@
     "url": "git://github.com/dsgndhat/middleman-seed.git"
   },
   "dependencies": {
+    "ansi-colors": "^1.0.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "browser-sync": "^2.18.13",
     "del": "2.2.2",
+    "es6-promise": "^4.1.1",
+    "expose-loader": "^0.7.4",
+    "fancy-log": "^1.3.2",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-cssnano": "2.1.2",
     "gulp-data": "1.2.1",
+    "gulp-htmlmin": "3.0.0",
     "gulp-if": "2.0.2",
+    "gulp-imagemin": "4.1.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "1.2.2",
     "gulp-replace": "^0.5.4",
@@ -39,13 +45,17 @@
     "gulp-sizereport": "1.2.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-svgstore": "6.1.0",
-    "gulp-util": "^3.0.8",
     "gulp-watch": "4.3.11",
+    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-pngquant": "^6.0.0",
+    "imagemin-zopfli": "^5.1.0",
     "lodash": "^4.17.4",
     "merge-stream": "^1.0.1",
     "minimist": "^1.2.0",
     "node-fs-extra": "^0.8.2",
+    "node-sass-glob-importer": "^5.0.0-alpha.5",
     "open": "0.0.5",
+    "plugin-error": "^0.1.2",
     "pretty-hrtime": "1.0.3",
     "require-dir": "0.3.2",
     "webpack": "^3.4.1",
@@ -54,15 +64,14 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "jquery": "^3.3.1",
     "mocha": "3.2.0",
-    "sw-precache": "^5.2.0"
+    "moment": "^2.22.1",
+    "webfontloader": "^1.6.27"
   },
   "scripts": {
     "dev": "gulp",
     "prod": "gulp build",
     "dev:test": "mocha ./gulpfile.js/**/*.test.js"
-  },
-  "engines": {
-    "node": ">=6.9.4"
   }
 }
