--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,14 @@
+require: rubocop-performance
+AllCops:
+  Exclude:
+    - 'spec/**/*'
+    - 'bin/*'
+    - 'node_modules/**/*'
+    - 'config.rb'
+    - 'vendor/**/*'
+
+Metrics/LineLength:
+  Max: 120
+
 Style/FrozenStringLiteralComment:
   Enabled: false
