--- a/package.json
+++ b/package.json
@@ -1,77 +1,83 @@
 {
-  "name": "middleman-seed",
-  "version": "1.0.0",
-  "description": "seo optimised boilerplate for middleman 4 with gulp, webpack and rspec",
-  "author": "dsgndhat <dsgndhat@teknik.io>",
-  "homepage": "https://github.com/dsgndhat/middleman-seed",
+  "name": "mmseed",
+  "version": "1.2.0",
+  "description": "Middleman Seed is a starter for fast prototyping",
   "license": "MIT",
-  "keywords": [
-    "middleman",
-    "gulp",
-    "webpack"
-  ],
-  "main": "gulpfile.js/index.js",
+  "main": "gulpfile.babel.js/index.js",
+  "homepage": "https://gitlab.com/dsgndhat/mmseed",
   "repository": {
     "type": "git",
-    "url": "git://github.com/dsgndhat/middleman-seed.git"
+    "url": "git://gitlab.com/dsgndhat/mmseed.git"
   },
-  "dependencies": {
-    "ansi-colors": "^1.0.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "browser-sync": "^2.18.13",
-    "del": "2.2.2",
-    "es6-promise": "^4.1.1",
-    "expose-loader": "^0.7.4",
-    "fancy-log": "^1.3.2",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.1",
-    "gulp-changed": "^2.0.0",
-    "gulp-cssnano": "2.1.2",
-    "gulp-data": "1.2.1",
-    "gulp-htmlmin": "3.0.0",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "4.1.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-rename": "1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "7.1.2",
-    "gulp-rev-napkin": "0.1.0",
-    "gulp-rev-replace": "0.4.3",
-    "gulp-sass": "^3.1.0",
-    "gulp-sequence": "0.4.6",
-    "gulp-sizereport": "1.2.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-svgstore": "6.1.0",
-    "gulp-watch": "4.3.11",
-    "imagemin-mozjpeg": "^7.0.0",
-    "imagemin-pngquant": "^6.0.0",
-    "imagemin-zopfli": "^5.1.0",
-    "lodash": "^4.17.4",
-    "merge-stream": "^1.0.1",
-    "minimist": "^1.2.0",
-    "node-fs-extra": "^0.8.2",
-    "node-sass-glob-importer": "^5.0.0-alpha.5",
-    "open": "0.0.5",
-    "plugin-error": "^0.1.2",
-    "pretty-hrtime": "1.0.3",
-    "require-dir": "0.3.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "jquery": "^3.3.1",
-    "mocha": "3.2.0",
-    "moment": "^2.22.1",
-    "webfontloader": "^1.6.27"
-  },
+  "keywords": [
+    "starter",
+    "middleman",
+    "blog",
+    "theme"
+  ],
   "scripts": {
     "dev": "gulp",
-    "prod": "gulp build",
-    "dev:test": "mocha ./gulpfile.js/**/*.test.js"
+    "gulp": "gulp",
+    "prod": "NODE_ENV=production gulp build",
+    "dev:test": "mocha --require @babel/register ./test/*.test.js"
+  },
+  "dependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/register": "^7.4.4",
+    "ansi-colors": "^4.1.1",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.24.4",
+    "core-js": "^3.2.1",
+    "del": "^5.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "fancy-log": "^1.3.2",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "7.0.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-changed": "^4.0.1",
+    "gulp-cssnano": "2.1.3",
+    "gulp-data": "1.3.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "3.0.0",
+    "gulp-imagemin": "6.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rev": "9.0.0",
+    "gulp-rev-napkin": "0.1.0",
+    "gulp-rev-replace": "0.4.4",
+    "gulp-sass": "^4.0.1",
+    "gulp-sizereport": "1.2.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-svgstore": "7.0.1",
+    "gulp-watch": "5.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-zopfli": "^6.0.0",
+    "lodash.mergewith": "^4.6.1",
+    "merge-stream": "^2.0.0",
+    "minimist": "^1.2.0",
+    "node-sass-glob-importer": "^5.1.3",
+    "open": "6.4.0",
+    "plugin-error": "^1.0.1",
+    "require-dir": "1.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.39.2",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
+  },
+  "devDependencies": {
+    "aos": "^2.3.4",
+    "chai": "^4.1.2",
+    "jquery": "^3.3.1",
+    "mocha": "^6.2.0",
+    "moment": "^2.22.1",
+    "salvattore": "^1.0.9",
+    "webfontloader": "^1.6.28",
+    "why-is-node-running": "^2.0.2"
   }
 }
